--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#8a2ca2",
-        "activityBar.activeBorder": "#af9530",
+        "activityBar.background": "#d04649",
+        "activityBar.activeBorder": "#37cb34",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#af9530",
+        "activityBarBadge.background": "#37cb34",
         "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#68217a",
-        "titleBar.inactiveBackground": "#68217a99",
+        "titleBar.activeBackground": "#b52e31",
+        "titleBar.inactiveBackground": "#b52e3199",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#68217a",
-        "statusBarItem.hoverBackground": "#8a2ca2",
+        "statusBar.background": "#b52e31",
+        "statusBarItem.hoverBackground": "#d04649",
         "statusBar.foreground": "#e7e7e7"
     },
-    "peacock.color": "#68217A"
+    "peacock.color": "#b52e31"
 }
